--- a/index.html
+++ b/index.html
@@ -59,17 +59,6 @@
   </head>
 
   <div class="wrapper overflow-hidden">
-    <video width="600" height="100%" autoplay loop muted playsinline>
-      <!-- <source
-        src="https://rotato.netlify.app/alpha-demo/movie-hevc.mov"
-        type='video/mp4; codecs="hvc1"'
-      /> -->
-      <!-- <source
-        src="https://rotato.netlify.app/alpha-demo/movie-webm.webm"
-        type="video/webm"
-      /> -->
-    </video>
-
     <body>
       <div
         class="absolute inset-0 bg-black from-slate-800/20 via-slate-900/10 to-transparent"
@@ -87,7 +76,7 @@
       />
 
       <div
-        class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-start mt-[8rem] p-12 w-full h-full relative"
+        class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-start mt-[25rem] p-12 w-full h-full relative"
       >
         <div
           class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
@@ -103,7 +92,7 @@
         ></video> -->
 
         <h1
-          class="text-6xl lg:text-7xl font-bold mb-8 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl relative z-10 text-center"
+          class="text-6xl lg:text-7xl font-bold mb-8 mt-14 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl relative z-10 text-center"
         >
           Exmony
         </h1>
