--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
 
             const span = document.createElement("span");
             span.className =
-              "font-mono font-bold text-xl lg:text-2xl text-slate-300 group-hover:text-slate-200 transition-colors duration-300";
+              "font-mono font-bold text-2xl lg:text-3xl text-slate-300 group-hover:text-slate-200 transition-colors duration-300";
+
             span.textContent = cur.code;
             td0.appendChild(span);
             tr.appendChild(td0);
@@ -234,7 +235,16 @@
       <footer
         class="w-full text-center p-4 text-slate-400 text-sm absolute bottom-0 z-10 text-xl"
       >
-        Powered By <span class="text-white font-semibold">Apegres®</span>
+        Powered By
+        <span
+          class="text-yellow-400 font-semibold"
+          style="
+            text-shadow: 0 0 6px rgba(250, 204, 21, 0.9),
+              0 0 12px rgba(250, 204, 21, 0.6);
+          "
+        >
+          Apegres®
+        </span>
       </footer>
     </body>
   </div>
