--- a/index.html
+++ b/index.html
@@ -119,6 +119,81 @@
             </table>
           </div>
 
+          <!-- New Content Section Below Table -->
+          <div class="mt-12 text-center relative z-10">
+            <!-- Main Slogan -->
+            <div class="mb-8">
+              <h2
+                class="text-4xl lg:text-5xl font-bold mb-4 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent"
+              >
+                "Your Gateway to Global Currency"
+              </h2>
+              <p class="text-xl lg:text-2xl text-slate-300 font-light">
+                Real-time rates • Trusted service • Seamless exchange
+              </p>
+            </div>
+
+            <!-- Key Features -->
+            <div class="grid grid-cols-3 gap-8 mt-10">
+              <div
+                class="bg-gradient-to-br from-slate-800/40 via-slate-700/40 to-slate-800/40 backdrop-blur-sm border border-slate-600/30 rounded-2xl p-6"
+              >
+                <div class="text-3xl mb-3">⚡</div>
+                <h3 class="text-lg font-semibold text-slate-200 mb-2">
+                  Live Updates
+                </h3>
+                <p class="text-sm text-slate-400">
+                  Real-time currency rates updated instantly
+                </p>
+              </div>
+
+              <div
+                class="bg-gradient-to-br from-slate-800/40 via-slate-700/40 to-slate-800/40 backdrop-blur-sm border border-slate-600/30 rounded-2xl p-6"
+              >
+                <div class="text-3xl mb-3">🔒</div>
+                <h3 class="text-lg font-semibold text-slate-200 mb-2">
+                  Secure Trading
+                </h3>
+                <p class="text-sm text-slate-400">
+                  Safe and reliable currency exchange
+                </p>
+              </div>
+
+              <div
+                class="bg-gradient-to-br from-slate-800/40 via-slate-700/40 to-slate-800/40 backdrop-blur-sm border border-slate-600/30 rounded-2xl p-6"
+              >
+                <div class="text-3xl mb-3">🌍</div>
+                <h3 class="text-lg font-semibold text-slate-200 mb-2">
+                  Global Reach
+                </h3>
+                <p class="text-sm text-slate-400">
+                  Multiple currencies from around the world
+                </p>
+              </div>
+            </div>
+
+            <!-- Call to Action -->
+            <div class="mt-10">
+              <p class="text-lg text-slate-300 mb-4">
+                Ready to exchange? Visit our branch or contact us today!
+              </p>
+              <div class="flex justify-center gap-6 text-slate-400">
+                <span class="flex items-center gap-2">
+                  <span class="text-yellow-400">📞</span>
+                  <span>+995 XXX XXX XXX</span>
+                </span>
+                <span class="flex items-center gap-2">
+                  <span class="text-yellow-400">📍</span>
+                  <span>Tbilisi, Georgia</span>
+                </span>
+                <span class="flex items-center gap-2">
+                  <span class="text-yellow-400">🕒</span>
+                  <span>Open 24/7</span>
+                </span>
+              </div>
+            </div>
+          </div>
+
           <div
             class="absolute -top-6 -left-8 w-40 h-40 bg-gradient-to-r from-gray-600 to-slate-700 rounded-full blur-xl opacity-20 animate-pulse"
           ></div>
