--- a/index.html
+++ b/index.html
@@ -116,12 +116,20 @@
         z-index: 9999;
         background: black;
         display: none;
+        transform: rotate(90deg);
+        transform-origin: center center;
+        width: 100vh;
+        height: 100vw;
+        top: -100vw;
+        left: 0;
       }
       
       #video-player video {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transform: rotate(90deg);
+        transform-origin: center center;
       }
       
       #video-close {
